k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk-team-09-backend
  namespace: sk-team-09
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk-team-09-backend
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
        prometheus.io/path: "/actuator/prometheus"
      labels:
        app: sk-team-09-backend
    spec:
      serviceAccountName: default
      containers:
        - name: sk-team-09-backend
          image: amdp-registry.skala-ai.com/skala25a/sk-team-09-backend:1.0.0-38-32279c7057e0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: google-credentials
              mountPath: /secrets/google
              readOnly: true

      volumes:
        - name: google-credentials
          secret:
            secretName: google-credentials

      imagePullSecrets:
        - name: amdp-registry
