k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk-team-09-backend
  namespace: sk-team-09
  labels:
    app: sk-team-09-backend
spec:
  type: ClusterIP
  selector:
    app: sk-team-09-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: mgmt
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
