k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sk-team-09-backend
  namespace: sk-team-09
spec:
  ingressClassName: public-nginx
  rules:
    - host: skib-backend.skala25a.project.skala-ai.com
      http:
        paths:
          - backend:
              service:
                name: sk-team-09-backend
                port:
                  number: 8080
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: sk-team-09-backend
                port:
                  number: 8081
            path: /actuator
            pathType: Prefix
          - backend:
              service:
                name: sk-team-09-backend
                port:
                  number: 8080
            path: /swagger-ui
            pathType: Prefix
          - backend:
              service:
                name: sk-team-09-backend
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "skib-backend.skala25a.project.skala-ai.com"
      secretName: skib-backend-tls-cert
